--- a/Java_The_Complete_Reference_Twelfth_Edition_Herbert_Schildt/008. Herencia.md
+++ b/Java_The_Complete_Reference_Twelfth_Edition_Herbert_Schildt/008. Herencia.md
@@ -727,7 +727,7 @@ public class Triangulo extends Figura {
 ## Usando clases abstractas
 
 - **En qué situaciones nos servirá la clase abstracta?**
-    - Cuando queramos crear una clase que defina de forma general lo que compartirá en sus subclases. La clase abstracta será como una idea, no tendrá todos los métodos implementados.
+    - Cuando queramos crear una clase que defina de forma general lo que compartirá en sus subclases. La clase abstracta será como una idea, no tendrá todos los métodos implementados. Siempre tendrá que tener un método abstracto como mínimo.
     - Por ejemplo en la clase Figura, el método area() no estaría implementado, pero la clase Figura tiene la idea de que toda figura tiene un área. No está implementado pq cada subclase de figura tendrá su fórmula específica para el área.
 - **Cómo declaramos una clase abstracta?**
     - abstract type nombreClase(parámetro-list)
